2011-02-10  Peter Varga  <pvarga@webkit.org>

        Reviewed by Csaba Osztrogonác.

        Remove PCRE source from trunk
        https://bugs.webkit.org/show_bug.cgi?id=54188

        * wx/build/settings.py:

2011-02-10  David Levin  <levin@chromium.org>

        Reviewed by Shinichiro Hamaji.

        check-webkit-style should be able to figure out function modifiers and return type.
        https://bugs.webkit.org/show_bug.cgi?id=54124

        * Scripts/webkitpy/style/checkers/cpp.py:
        (_rfind_in_lines): A way to search backwards in lines.
        (_FunctionState.modifiers_and_return_type):
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Added tests for the new functionality.

2011-02-09  Adam Roben  <aroben@apple.com>

        Test that WM_PRINT doesn't trigger an assertion

        Test for <http://webkit.org/b/54145> <rdar://problem/8979559> WM_PRINT doesn't work with new
        drawing area (assertion failure in DrawingAreaProxyImpl in Debug builds)

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WebKit2/win/WMPrint.cpp: Added.
        (TestWebKitAPI::TEST): Send a WM_PRINT message to a WKView.

2011-02-09  Adam Roben  <aroben@apple.com>

        Test that having a WKView paint after being resized while hidden doesn't cause a crash

        Test for <http://webkit.org/b/54142> <rdar://problem/8979365> Crash in
        DrawingAreaProxyImpl::paint when WKView paints after being resized while hidden

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WebKit2/win/ResizeViewWhileHidden.cpp:
        (TestWebKitAPI::TEST): Force the WKView to paint after resizing it while hidden.

2011-02-09  Adam Roben  <aroben@apple.com>

        Add a test that resizes a WKView while it's hidden

        Test for <http://webkit.org/b/54141> <rdar://problem/8979195> WKView draws at wrong size,
        performs badly if is resized while hidden (assertion fails in
        BackingStore::incorporateUpdate in Debug builds)
